first commit for base structure with routing for the components

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -2,7 +2,7 @@
     background-color: #004d40;
     color: white;
     text-align: center;
-    padding: 1.5rem;
+    padding: 0.75rem 0;
     font-size: 0.9rem;
     position: relative;
     bottom: 0;
