--- a/src/app/components/blogdetail/blogdetail.component.html
+++ b/src/app/components/blogdetail/blogdetail.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="blog">
     <img [src]="blog.banner" alt="{{ blog.title }}" class="blog-banner" />
     <h1>{{ blog.title }}</h1>
-    <div class="blog-content" [innerHTML]="blog.htmlContent"></div>
+    <div class="blog-content" [innerHTML]="safeHtmlContent"></div>
 </div>
   hello its blog detail
