--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -15,8 +15,10 @@
     <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="toggleMenu()">Home</a>
     <a routerLink="/projects" routerLinkActive="active" (click)="toggleMenu()">Projects</a>
     <a routerLink="/donate" routerLinkActive="active" (click)="toggleMenu()">Donate</a>
-    <a routerLink="/volunteer" routerLinkActive="active" (click)="toggleMenu()">Volunteer</a>
+    <a href="#" (click)="openVolunteer($event)" (click)="toggleMenu()">Volunteer</a>
     <a routerLink="/blog" routerLinkActive="active" (click)="toggleMenu()">Blog</a>
     <a routerLink="/contact" routerLinkActive="active" (click)="toggleMenu()">Contact</a>
   </nav>
 </header>
+<app-volunteer *ngIf="showVolunteer" (close)="showVolunteer = false"></app-volunteer>
+
