intergrated mailJS and added blogs

--- a/src/app/components/volunteer/volunteer.component.scss
+++ b/src/app/components/volunteer/volunteer.component.scss
@@ -73,3 +73,10 @@
     color: green;
   }
   
+  .snackbar {
+    background-color: #424242; /* dark grey */
+    color: white;
+    font-size: 15px;
+    font-weight: 500;
+    border-radius: 6px;
+  }
