--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -11,14 +11,13 @@
   
       <div class="contact-map">
         <iframe
-          width="100%"
-          height="250"
-          style="border: 0"
-          loading="lazy"
-          allowfullscreen
-          referrerpolicy="no-referrer-when-downgrade"
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3766.142760257653!2d74.74381431490347!3d19.268394386985197!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bdc52a7f9f9028d%3A0x48c020ba7d5e5cb6!2sHarit%20Kranti%20Building%2C%20Market%20Yard%2C%20Ahilyanagar%2C%20Maharashtra%20414001!5e0!3m2!1sen!2sin!4v1714742121004!5m2!1sen!2sin">
-        </iframe>
+        width="100%" 
+        height="250" 
+        style="border:0;" 
+        allowfullscreen 
+        loading="eager" 
+        referrerpolicy="no-referrer-when-downgrade"
+        src="https://maps.google.com/maps?q=19.086426, 74.738389&hl=en&z=16&output=embed"></iframe>
       </div>
     </div>
   </section>
