changed css for header, added blogs for farmer empowerment, education, changed projects component's time for changing pic on project card

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,8 @@
 <header class="main-header">
   <div class="logo">
     <a routerLink="/">
-      <img src="assets/images/logo.jpg" alt="Aikya Seva Centre Logo" class="logo-img" />
+      <img src="assets/images/logo.png" alt="Aikya Seva Centre Logo" class="logo-img" />
+      <span class="logo-text">Aikya Seva Center</span>
     </a>
   </div>
 
