--- a/src/app/components/blogdetail/blogdetail.component.html
+++ b/src/app/components/blogdetail/blogdetail.component.html
@@ -3,4 +3,4 @@
     <h1>{{ blog.title }}</h1>
     <div class="blog-content" [innerHTML]="safeHtmlContent"></div>
 </div>
-  hello its blog detail
+ <a (click)="goTo('projects')" class="btn back-btn">Go to projects</a>
