--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -50,4 +50,14 @@
       }
     }
   }
+
+  .projects-intro {
+  max-width: 800px;
+  margin: 0 auto 2rem auto;
+  text-align: center;
+  font-size: 1.05rem;
+  color: #444;
+  line-height: 1.7;
+}
+
   
