--- a/src/app/components/donate/donate.component.scss
+++ b/src/app/components/donate/donate.component.scss
@@ -1,3 +1,4 @@
+*donae.component.scss*
 /* FULL BANNER HERO */
 .donation-banner {
     position: relative;
@@ -39,7 +40,6 @@
     display: flex;
     flex-wrap: wrap;
     gap: 2rem;
-    padding: 2rem;
   
     .donation-info,
     .donation-details {
@@ -80,5 +80,18 @@
       margin-top: 1rem;
       color: #777;
     }
+
+
+    @media(max-width: 300px){
+
+      .donation-container{
+        gap: 2rem;
+        padding: 0;
+        background-color: #006666
+      }
+
+    } ;
+      
+    
+
   }
-  
